# Zion-Password-Manager

./: .gitignore  APACHE_LICENSE.txt  Cargo.toml  Dockerfile  MIT_LICENSE.txt  Makefile  README.md  build_and_run_docker.sh  build_and_test_docker.sh  configure.sh  docker-compose-run.sh  docker-compose-test.sh  docker-compose.yaml  run-entrypoint.sh  test-entrypoint.sh
.github/: dependabot.yml
.github/workflows/: rust-clippy.yml  rust.yml
backend/: .gitignore  Cargo.toml  Dockerfile  build.rs
backend/migrations/2022-11-13-225713_users/: up.sql
backend/migrations/2022-12-14-172026_users/: up.sql
backend/migrations/2023-01-03-062558_session_cookies/: down.sql  up.sql
backend/src/: main.rs  schema.rs
backend/src/database/: mod.rs  models.rs
backend/src/database/models/: session.rs  user.rs
backend/src/database/routes/: errors.rs  mod.rs  user.rs
backend/src/utils/: config.rs  logging.rs  migrations.rs  mod.rs  testing.rs
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  index.html  main.tsx
frontend/src/components/: form.css  home.tsx  navbar.tsx
frontend/src/components/login/: form.tsx
frontend/src/components/register/: form.tsx
frontend/src/errors/: error_404.css  error_404.html  error_404.tsx
frontend/src/login/: login.html  login.tsx
frontend/src/register/: register.css  register.html  register.tsx
migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
server/: Cargo.toml
server/src/: database.rs  main.rs
server/src/database/: mod.rs  passwords.rs  users.rs
src/: database.rs  main.rs  schema.rs
src/database/: mod.rs  models.rs  passwords.rs
static/css/: main.css
static/html/: index.hbs  index.html  login.hbs  login.html  register.hbs  register.html
