[package]
name = "zion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.1.0" , features = ["default"]}
actix-files = "0.6.2"
serde_json = "1.0.53"
serde = { version = "1.0.144", features = ["derive"] }
handlebars = { version = "4.3.4", features = ["dir_source"] }
diesel = { version = "2.0.0-rc.0", features = ["postgres"] }
dotenvy = "0.15"
bcrypt = "0.13.0"
reqwest = { version = "0.11" }