[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
diesel = { version = "2.0.2", features = ["postgres", "r2d2"] }
anyhow = "1.0.66"
pbkdf2 = "0.11.0"
rand_core = { version = "0.6", features = ["std"] }
serial_test = "0.10.0"
regex = "1"
actix-files = "0.6.2"
log = "0.4"
env_logger = "0.10"

[dependencies.actix-web-lab]
version = "0.18.8"

[dependencies.actix-web]
version = "4"
features = ["macros"]

[dependencies.tokio]
version = "1.6.1"
features = ["fs", "io-std", "io-util", "rt-multi-thread", "sync", "signal", "macros"]
