[package]
name = "backend"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv_codegen = "0.15.0"
diesel = { version = "2.0.2", features = ["postgres", "r2d2", "uuid"] }
diesel_migrations = "2.0.0"
uuid = { version = "1.2", features = ["serde", "v4"]}
anyhow = "1.0.66"
pbkdf2 = "0.11.0"
rand_core = { version = "0.6", features = ["std"] }
serial_test = "1.0.0"
regex = "1"
actix-files = "0.6.2"
actix-identity = "0.5.2"
actix-session = { version = "0.7.2", features = ["cookie-session"] }
derive_more = "0.99"
log = "0.4"
tracing-actix-web = "0.7"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-log = "0.1"
actix-service = "2.0.2"
actix-governor = "0.4.0"

[dependencies.cookie]
version = "0.17"
features = ["secure", "percent-encode"]

[dependencies.actix-web]
version = "4"
features = ["macros", "cookies"]

[dependencies.tokio]
version = "1.6.1"
features = ["fs", "io-std", "io-util", "rt-multi-thread", "sync", "signal", "macros"]
