[package]
name = "zion"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix-web = { version = "4.1.0" , features = ["default", "cookies"]}
actix-files = "0.6.2"
actix-test-server = "0.2.2"
serde_json = "1.0.53"
handlebars = { version = "4.1.4", features = ["dir_source"] }
chrono = "0.4"
bson = { version = "2.4.0", features = ["chrono-0_4"] }
serde = { version = "1.0", features = ["derive"] }
sha256 = "1.0.3"
rand = "0.8.5"
futures = "0.3.24"
actix-test = "0.1.0"
cookie = "0.16"

[dependencies.mongodb]
version = "2.3.1"
default-features = false
features = ["async-std-runtime", "bson-chrono-0_4"]