[package]
name = "zion"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix-web = { version = "4.1.0" , features = ["default", "cookies"]}
actix-files = "0.6.2"
actix-test-server = "0.2.2"
serde_json = "1.0.53"
handlebars = { version = "4.1.4", features = ["dir_source"] }
serde = { version = "1.0", features = ["derive"] }
sha256 = "1.0.3"
rand = "0.8.5"
actix-test = "0.1.0"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
